@@ -1,6 +1,7 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.18 - 2021-xx-xx =
+* Fix   - Show error when missing required destination phone for international shipments.
 * Tweak - Bump WP tested version to 5.8.
 * Tweak	- Bump WC Tested version to 5.5.
 
